# AutoCam

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  Doxyfile  Makefile  README.md  arg.h  autocamAndVlc.sh  autocamera.cpp  autocamera.h  automotion.cpp  automotion.h  autozoom.cpp  autozoom.h  camera.cpp  camera.h  cmake_install.cmake  cvwindow.cpp  cvwindow.h  detectingrules.cpp  detectingrules.h  detector.cpp  director.cpp  director.h  face.cpp  face.h  facedetect  facedetect.cpp  facedetect.sublime-project  facedetect.sublime-workspace  frame.cpp  frame.h  log.cpp  log.h  main.cpp  operator.cpp  operator.h  output.cpp  output.h  (+8 more)
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated.js  arg_8cpp.html  arg_8h.html  arg_8h_source.html  autocamera_8cpp.html  autocamera_8h.html  autocamera_8h_source.html  automotion_8cpp.html  automotion_8h.html  automotion_8h_source.html  autozoom_8cpp.html  autozoom_8h.html  autozoom_8h_source.html  class_arg-members.html  class_arg.html  class_arg.js  class_auto_camera-members.html  class_auto_camera.html  class_auto_camera.js  class_auto_pan-members.html  class_auto_pan.html  class_auto_pan.js  class_auto_zoom-members.html  class_auto_zoom.html  class_auto_zoom.js  class_motion_automata-members.html  class_motion_automata.html  class_motion_automata.js  classauto_motion-members.html  classauto_motion.html  classauto_motion.js  classes.html  doxygen.css  facedetect_8cpp.html  facedetect_8cpp.js  files.html  files.js  functions.html  (+21 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  search.css  search.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+6 more)
doc/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  class_arg.tex  classauto_motion.tex  facedetect_8cpp.tex  files.tex  md__r_e_a_d_m_e.tex  refman.tex  todo.tex
doc/man/man3/: Arg.3  AutoCamera.3  AutoPan.3  AutoZoom.3  MotionAutomata.3  README.md.3  arg.cpp.3  arg.h.3  autocamera.cpp.3  autocamera.h.3  automotion.cpp.3  automotion.h.3  autozoom.cpp.3  autozoom.h.3  facedetect.cpp.3  md__r_e_a_d_m_e.3  statemachine.cpp.3  statemachine.h.3
doc/rtf/: refman.rtf
src/: CMakeLists.txt  arg.h  autocamera.cpp  autocamera.h  automotion.cpp  automotion.h  autozoom.cpp  autozoom.h  detector.cpp  detector.h  preview.cpp  preview.h  viewfinder.cpp  viewfinder.h
